      working around a bug in CentOS 7 and Fedora 30 (possibly others as
      well).
    - patches.xorg/1.20.5: likewise add missing modeline2c.awk file. Actually
      needed for Fedora 30.
    - patches.xorg/1.19.2/xorg-server-configure-ac.patch: backport
      XORG_VERSION_CURRENT change from
      e0dbca73f11e9aa7a066e748e6d08ba256be69cf / 1.20.5.
  * debian/control:
    + Grammar fix.
    + Remove dependencies that refer to disabled features.
    + Add build-dependency upon libpam-dev. It would really be libpam0g-dev
      currently, but that looks like a moving target.
  * x2gokdrive.spec:
    + Drop Debian-style formatting in description.
    + Typo fixes.
    + Remove empty line at EOF.
    + Copy summary from Debian's short description.
    + Spell out each (build) dependency on one line.
    + Whitespace-only fixes.
    + Backport changes from debian/rules.
    + Copy *.la file removal mechanism from debian/rules.
    + Pull in lsb-release on *SuSE systems and redhat-lsb otherwise for
      lsb_release, needed at package configuration time.
    + Enable hardening in a low-effort way.
    + Disable debugsource... disabling. Debug packages are actually useful!
    + Copy configure flags from debian/rules{,.flags}. Most compiler flags
      should be getting passed down automatically through the %configure
      macro, but CPPFLAGS is special and seemingly not defined in
      redhat-rpm-macros (or the *SuSE equivalent) and is hence passed-down
      manually. %{__global_ldflags} is empty and unknown on some systems, so
      copy workaround from nx-libs for that one.
    + Sync dependency lists with debian/control.
    + Rename binary package to xorg-x11-server-x2gokdrive to be consistent
      with Fedora/*SuSE package naming.
    + It's still %endif, not %fi.
    + Let description be the description of xorg-x11-server-x2gokdrive, not
      the x2gokdrive source package.
    + Add/copy Summary tag to xorg-x11-server-x2gokdrive binary package.